# HTU_ebeam_transport_optimization

./: .gitignore  INSTALL.sh  README.md  pyproject.toml
base_lte_ele_files/: HTU_base_lattice.lte  HTU_base_lattice_matched.lte  HTU_base_tracking.ele  HTU_match_fodo.ele  run.sh
examples/2D_steering_scan_of_S3H_S4H/: archive.sh  cleanup.sh  description.md  postprocess.py  preprocess.py  run.sh  steering_scan.yml
examples/backtracking/: HTU_back2matching.ele  ReferenceEMQValues.ele  description.txt  exe
examples/parameter_scan_with_jitter/: HTU_base_run.ele  description.txt  postprocess.py  preprocess.py  preprocess_settings.yml  scan.py  single_sim_with_jitter.yml  summary.py
examples/single_sim_with_jitter/: HTU_base_lattice_matched.lte  description.txt  run.sh  single_sim_with_jitter.yml  summary.py
examples/transport_optimize/: bayes_UCB.yaml  scan.py  single_sim_with_jitter.yml  summary.py
examples/transport_optimize/config_files/base_xop_optimization_configs/: bayes_ucb.yaml
htu_ebeam_transport_optimization/: types.py
htu_ebeam_transport_optimization/quad_scan_quad_optimization/: main.py  measure.py  optimize.py  scan.py  set.py
htu_ebeam_transport_optimization/quad_scan_quad_optimization/optimize_elegant_files/: HTU_back2matching.ele  HTU_base_lattice_matched.lte  description.txt  step0.lte
htu_ebeam_transport_quadrupole_optimization/: __init__.py
rsopt_interface/: run_rsopt.py
rsopt_simulation_manager/: README.md  run.py
rsopt_simulation_manager/apps/: __init__.py
rsopt_simulation_manager/apps/home/: forms.py  routes.py
rsopt_simulation_manager/apps/logic/: experiments.py  runs.py  settings.py
rsopt_simulation_manager/apps/templates/home/: experiment.html  experiments.html  new.html  run.html  runs.html  settings.html
rsopt_simulation_manager/apps/templates/includes/: footer-fullscreen.html  footer.html  navigation-fullscreen.html  navigation.html  sidenav.html
rsopt_simulation_manager/apps/templates/layouts/: base-fullscreen.html  base.html
shared/: quad_scan_analysis.py  utils.py
shared/optimization_functions/: visa1_4_size_min.py
shared/phase_space_tools/: Beam.py  file_conversion.py
